--- a/docs/components/EventPhotographerComponent.html
+++ b/docs/components/EventPhotographerComponent.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title>Eventpicking - Dokumentation</title>
+        <title>EventPicKing - Dokumentation</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -13,7 +13,7 @@
     <body>
 
         <div class="navbar navbar-default navbar-fixed-top visible-xs">
-            <a href="../" class="navbar-brand">Eventpicking - Dokumentation</a>
+            <a href="../" class="navbar-brand">EventPicKing - Dokumentation</a>
             <button type="button" class="btn btn-default btn-menu fa fa-bars" id="btn-menu"></button>
         </div>
 
@@ -26,7 +26,7 @@
                 <ul class="list">
             
                     <li class="title">
-                        <a href="../index.html">Eventpicking - Dokumentation</a>
+                        <a href="../index.html">EventPicKing - Dokumentation</a>
                     </li>
             
                     <li class="divider"></li>
@@ -382,7 +382,7 @@
                        <ul class="list">
                    
                            <li class="title">
-                               <a href="../index.html">Eventpicking - Dokumentation</a>
+                               <a href="../index.html">EventPicKing - Dokumentation</a>
                            </li>
                    
                            <li class="divider"></li>
@@ -930,7 +930,7 @@
                     </tr>
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="46" class="link-to-prism">src/app/components/event-photographer/event-photographer.component.ts:46</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="45" class="link-to-prism">src/app/components/event-photographer/event-photographer.component.ts:45</a></div>
                                 </td>
                             </tr>
     
@@ -1018,7 +1018,7 @@
                     </tr>
                             <tr>
                                 <td class="col-md-2" colspan="2">
-                                    <div class="io-line">Defined in <a href="" data-line="40" class="link-to-prism">src/app/components/event-photographer/event-photographer.component.ts:40</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="39" class="link-to-prism">src/app/components/event-photographer/event-photographer.component.ts:39</a></div>
                                 </td>
                             </tr>
                 </tbody>
@@ -1041,7 +1041,7 @@
                     </tr>
                             <tr>
                                 <td class="col-md-2" colspan="2">
-                                    <div class="io-line">Defined in <a href="" data-line="42" class="link-to-prism">src/app/components/event-photographer/event-photographer.component.ts:42</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="41" class="link-to-prism">src/app/components/event-photographer/event-photographer.component.ts:41</a></div>
                                 </td>
                             </tr>
                 </tbody>
@@ -1064,7 +1064,7 @@
                     </tr>
                             <tr>
                                 <td class="col-md-2" colspan="2">
-                                    <div class="io-line">Defined in <a href="" data-line="44" class="link-to-prism">src/app/components/event-photographer/event-photographer.component.ts:44</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="43" class="link-to-prism">src/app/components/event-photographer/event-photographer.component.ts:43</a></div>
                                 </td>
                             </tr>
                 </tbody>
@@ -1101,7 +1101,7 @@
     
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="151" class="link-to-prism">src/app/components/event-photographer/event-photographer.component.ts:151</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="150" class="link-to-prism">src/app/components/event-photographer/event-photographer.component.ts:150</a></div>
                                 </td>
                             </tr>
     
@@ -1140,7 +1140,7 @@
     
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="167" class="link-to-prism">src/app/components/event-photographer/event-photographer.component.ts:167</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="166" class="link-to-prism">src/app/components/event-photographer/event-photographer.component.ts:166</a></div>
                                 </td>
                             </tr>
     
@@ -1209,7 +1209,7 @@
     
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="122" class="link-to-prism">src/app/components/event-photographer/event-photographer.component.ts:122</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="121" class="link-to-prism">src/app/components/event-photographer/event-photographer.component.ts:121</a></div>
                                 </td>
                             </tr>
     
@@ -1277,7 +1277,7 @@
     
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="110" class="link-to-prism">src/app/components/event-photographer/event-photographer.component.ts:110</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="109" class="link-to-prism">src/app/components/event-photographer/event-photographer.component.ts:109</a></div>
                                 </td>
                             </tr>
     
@@ -1345,7 +1345,7 @@
     
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="77" class="link-to-prism">src/app/components/event-photographer/event-photographer.component.ts:77</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="76" class="link-to-prism">src/app/components/event-photographer/event-photographer.component.ts:76</a></div>
                                 </td>
                             </tr>
     
@@ -1384,7 +1384,7 @@
     
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="174" class="link-to-prism">src/app/components/event-photographer/event-photographer.component.ts:174</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="173" class="link-to-prism">src/app/components/event-photographer/event-photographer.component.ts:173</a></div>
                                 </td>
                             </tr>
     
@@ -1423,7 +1423,7 @@
     
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="136" class="link-to-prism">src/app/components/event-photographer/event-photographer.component.ts:136</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="135" class="link-to-prism">src/app/components/event-photographer/event-photographer.component.ts:135</a></div>
                                 </td>
                             </tr>
     
@@ -1475,7 +1475,7 @@
                         </tr>
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="31" class="link-to-prism">src/app/components/event-photographer/event-photographer.component.ts:31</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="30" class="link-to-prism">src/app/components/event-photographer/event-photographer.component.ts:30</a></div>
                                 </td>
                             </tr>
     
@@ -1515,7 +1515,7 @@
                         </tr>
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="28" class="link-to-prism">src/app/components/event-photographer/event-photographer.component.ts:28</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="27" class="link-to-prism">src/app/components/event-photographer/event-photographer.component.ts:27</a></div>
                                 </td>
                             </tr>
     
@@ -1556,7 +1556,7 @@
                         </tr>
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="46" class="link-to-prism">src/app/components/event-photographer/event-photographer.component.ts:46</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="45" class="link-to-prism">src/app/components/event-photographer/event-photographer.component.ts:45</a></div>
                                 </td>
                             </tr>
     
@@ -1602,7 +1602,7 @@
                         </tr>
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="34" class="link-to-prism">src/app/components/event-photographer/event-photographer.component.ts:34</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="33" class="link-to-prism">src/app/components/event-photographer/event-photographer.component.ts:33</a></div>
                                 </td>
                             </tr>
     
@@ -1643,7 +1643,7 @@
                         </tr>
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="37" class="link-to-prism">src/app/components/event-photographer/event-photographer.component.ts:37</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="36" class="link-to-prism">src/app/components/event-photographer/event-photographer.component.ts:36</a></div>
                                 </td>
                             </tr>
     
@@ -1669,14 +1669,13 @@ import { Log } from &#x27;ng2-logger&#x27;;
 import { Observable } from &#x27;rxjs/Observable&#x27;;
 
 import { Event } from &#x27;../../classes/event&#x27;;
-import { PrintingHouse } from &#x27;../../interfaces/printing-house&#x27;;
+import { PriceList } from &#x27;../../classes/price-list&#x27;;
 import { Upload } from &#x27;../../classes/upload-file&#x27;;
 import { User } from &#x27;../../classes/user&#x27;;
 import { EventPicture } from &#x27;../../interfaces/event-picture&#x27;;
 import { FirebaseFirestoreService } from &#x27;../../services/firebase/firestore/firebase-firestore.service&#x27;;
 import { FirebaseStorageService } from &#x27;../../services/firebase/storage/firebase-storage.service&#x27;;
 import { NavigationService } from &#x27;../../services/navigation/navigation.service&#x27;;
-import { PriceList } from &#x27;../../classes/price-list&#x27;;
 
 /**
  * Event photographer view component
