--- a/docs/components/HomePageComponent.html
+++ b/docs/components/HomePageComponent.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title>Eventpicking - Dokumentation</title>
+        <title>EventPicKing - Dokumentation</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -13,7 +13,7 @@
     <body>
 
         <div class="navbar navbar-default navbar-fixed-top visible-xs">
-            <a href="../" class="navbar-brand">Eventpicking - Dokumentation</a>
+            <a href="../" class="navbar-brand">EventPicKing - Dokumentation</a>
             <button type="button" class="btn btn-default btn-menu fa fa-bars" id="btn-menu"></button>
         </div>
 
@@ -26,7 +26,7 @@
                 <ul class="list">
             
                     <li class="title">
-                        <a href="../index.html">Eventpicking - Dokumentation</a>
+                        <a href="../index.html">EventPicKing - Dokumentation</a>
                     </li>
             
                     <li class="divider"></li>
@@ -382,7 +382,7 @@
                        <ul class="list">
                    
                            <li class="title">
-                               <a href="../index.html">Eventpicking - Dokumentation</a>
+                               <a href="../index.html">EventPicKing - Dokumentation</a>
                            </li>
                    
                            <li class="divider"></li>
@@ -880,7 +880,7 @@
                     </tr>
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="21" class="link-to-prism">src/app/pages/home-page/home-page.component.ts:21</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="22" class="link-to-prism">src/app/pages/home-page/home-page.component.ts:22</a></div>
                                 </td>
                             </tr>
     
@@ -949,7 +949,7 @@
     
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="31" class="link-to-prism">src/app/pages/home-page/home-page.component.ts:31</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="32" class="link-to-prism">src/app/pages/home-page/home-page.component.ts:32</a></div>
                                 </td>
                             </tr>
     
@@ -1001,7 +1001,7 @@
                         </tr>
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="21" class="link-to-prism">src/app/pages/home-page/home-page.component.ts:21</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="22" class="link-to-prism">src/app/pages/home-page/home-page.component.ts:22</a></div>
                                 </td>
                             </tr>
     
@@ -1041,7 +1041,7 @@
                         </tr>
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="18" class="link-to-prism">src/app/pages/home-page/home-page.component.ts:18</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="19" class="link-to-prism">src/app/pages/home-page/home-page.component.ts:19</a></div>
                                 </td>
                             </tr>
     
@@ -1063,6 +1063,7 @@
         <pre class="line-numbers"><code class="language-typescript">import { Component, OnInit } from &#x27;@angular/core&#x27;;
 import { Log } from &#x27;ng2-logger&#x27;;
 import { Observable } from &#x27;rxjs/Observable&#x27;;
+
 import { EventPicture } from &#x27;../../interfaces/event-picture&#x27;;
 import { FirebaseFirestoreService } from &#x27;../../services/firebase/firestore/firebase-firestore.service&#x27;;
 
