--- a/docs/components/PhotographerPageComponent.html
+++ b/docs/components/PhotographerPageComponent.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title>Eventpicking - Dokumentation</title>
+        <title>EventPicKing - Dokumentation</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -13,7 +13,7 @@
     <body>
 
         <div class="navbar navbar-default navbar-fixed-top visible-xs">
-            <a href="../" class="navbar-brand">Eventpicking - Dokumentation</a>
+            <a href="../" class="navbar-brand">EventPicKing - Dokumentation</a>
             <button type="button" class="btn btn-default btn-menu fa fa-bars" id="btn-menu"></button>
         </div>
 
@@ -26,7 +26,7 @@
                 <ul class="list">
             
                     <li class="title">
-                        <a href="../index.html">Eventpicking - Dokumentation</a>
+                        <a href="../index.html">EventPicKing - Dokumentation</a>
                     </li>
             
                     <li class="divider"></li>
@@ -382,7 +382,7 @@
                        <ul class="list">
                    
                            <li class="title">
-                               <a href="../index.html">Eventpicking - Dokumentation</a>
+                               <a href="../index.html">EventPicKing - Dokumentation</a>
                            </li>
                    
                            <li class="divider"></li>
@@ -910,7 +910,7 @@
                     </tr>
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="46" class="link-to-prism">src/app/pages/photographer-page/photographer-page.component.ts:46</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="45" class="link-to-prism">src/app/pages/photographer-page/photographer-page.component.ts:45</a></div>
                                 </td>
                             </tr>
     
@@ -990,7 +990,7 @@
     
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="100" class="link-to-prism">src/app/pages/photographer-page/photographer-page.component.ts:100</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="99" class="link-to-prism">src/app/pages/photographer-page/photographer-page.component.ts:99</a></div>
                                 </td>
                             </tr>
     
@@ -1029,7 +1029,7 @@
     
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="113" class="link-to-prism">src/app/pages/photographer-page/photographer-page.component.ts:113</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="112" class="link-to-prism">src/app/pages/photographer-page/photographer-page.component.ts:112</a></div>
                                 </td>
                             </tr>
     
@@ -1068,7 +1068,7 @@
     
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="61" class="link-to-prism">src/app/pages/photographer-page/photographer-page.component.ts:61</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="60" class="link-to-prism">src/app/pages/photographer-page/photographer-page.component.ts:60</a></div>
                                 </td>
                             </tr>
     
@@ -1124,7 +1124,7 @@
                         </tr>
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="46" class="link-to-prism">src/app/pages/photographer-page/photographer-page.component.ts:46</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="45" class="link-to-prism">src/app/pages/photographer-page/photographer-page.component.ts:45</a></div>
                                 </td>
                             </tr>
     
@@ -1165,7 +1165,7 @@
                         </tr>
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="39" class="link-to-prism">src/app/pages/photographer-page/photographer-page.component.ts:39</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="38" class="link-to-prism">src/app/pages/photographer-page/photographer-page.component.ts:38</a></div>
                                 </td>
                             </tr>
     
@@ -1205,7 +1205,7 @@
                         </tr>
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="30" class="link-to-prism">src/app/pages/photographer-page/photographer-page.component.ts:30</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="29" class="link-to-prism">src/app/pages/photographer-page/photographer-page.component.ts:29</a></div>
                                 </td>
                             </tr>
     
@@ -1246,7 +1246,7 @@
                         </tr>
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="37" class="link-to-prism">src/app/pages/photographer-page/photographer-page.component.ts:37</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="36" class="link-to-prism">src/app/pages/photographer-page/photographer-page.component.ts:36</a></div>
                                 </td>
                             </tr>
     
@@ -1287,7 +1287,7 @@
                         </tr>
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="35" class="link-to-prism">src/app/pages/photographer-page/photographer-page.component.ts:35</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="34" class="link-to-prism">src/app/pages/photographer-page/photographer-page.component.ts:34</a></div>
                                 </td>
                             </tr>
     
@@ -1328,7 +1328,7 @@
                         </tr>
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="41" class="link-to-prism">src/app/pages/photographer-page/photographer-page.component.ts:41</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="40" class="link-to-prism">src/app/pages/photographer-page/photographer-page.component.ts:40</a></div>
                                 </td>
                             </tr>
     
@@ -1369,7 +1369,7 @@
                         </tr>
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="43" class="link-to-prism">src/app/pages/photographer-page/photographer-page.component.ts:43</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="42" class="link-to-prism">src/app/pages/photographer-page/photographer-page.component.ts:42</a></div>
                                 </td>
                             </tr>
     
@@ -1410,7 +1410,7 @@
                         </tr>
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="33" class="link-to-prism">src/app/pages/photographer-page/photographer-page.component.ts:33</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="32" class="link-to-prism">src/app/pages/photographer-page/photographer-page.component.ts:32</a></div>
                                 </td>
                             </tr>
     
@@ -1438,13 +1438,12 @@
 } from &#x27;@angular/core&#x27;;
 import { ActivatedRoute } from &#x27;@angular/router&#x27;;
 import { Log } from &#x27;ng2-logger&#x27;;
-import { Observable } from &#x27;rxjs/Observable&#x27;;
 
-import { PriceList } from &#x27;../../classes/price-list&#x27;;
-import { PrintingHouseArticle } from &#x27;../../interfaces/printing-house-article&#x27;;
-import { PRINTTYPE } from &#x27;../../enums/print-type&#x27;;
 import { Event } from &#x27;../../classes/event&#x27;;
+import { PriceList } from &#x27;../../classes/price-list&#x27;;
+import { PRINTTYPE } from &#x27;../../enums/print-type&#x27;;
 import { PhotographerProfile } from &#x27;../../interfaces/photographer-profile&#x27;;
+import { PrintingHouseArticle } from &#x27;../../interfaces/printing-house-article&#x27;;
 import { FirebaseFirestoreService } from &#x27;../../services/firebase/firestore/firebase-firestore.service&#x27;;
 
 /**
