--- a/docs/components/PhotographerSearchPageComponent.html
+++ b/docs/components/PhotographerSearchPageComponent.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title>Eventpicking - Dokumentation</title>
+        <title>EventPicKing - Dokumentation</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -13,7 +13,7 @@
     <body>
 
         <div class="navbar navbar-default navbar-fixed-top visible-xs">
-            <a href="../" class="navbar-brand">Eventpicking - Dokumentation</a>
+            <a href="../" class="navbar-brand">EventPicKing - Dokumentation</a>
             <button type="button" class="btn btn-default btn-menu fa fa-bars" id="btn-menu"></button>
         </div>
 
@@ -26,7 +26,7 @@
                 <ul class="list">
             
                     <li class="title">
-                        <a href="../index.html">Eventpicking - Dokumentation</a>
+                        <a href="../index.html">EventPicKing - Dokumentation</a>
                     </li>
             
                     <li class="divider"></li>
@@ -382,7 +382,7 @@
                        <ul class="list">
                    
                            <li class="title">
-                               <a href="../index.html">Eventpicking - Dokumentation</a>
+                               <a href="../index.html">EventPicKing - Dokumentation</a>
                            </li>
                    
                            <li class="divider"></li>
@@ -1839,11 +1839,11 @@
 import { Component, OnInit, ViewChild } from &#x27;@angular/core&#x27;;
 import { Log } from &#x27;ng2-logger&#x27;;
 
+import { Alert } from &#x27;../../interfaces/alert&#x27;;
 import { PhotographerProfile } from &#x27;../../interfaces/photographer-profile&#x27;;
+import { AlertService } from &#x27;../../services/alert/alert.service&#x27;;
 import { FirebaseFirestoreService } from &#x27;../../services/firebase/firestore/firebase-firestore.service&#x27;;
 import { GeolocationService } from &#x27;../../services/geolocation/geolocation.service&#x27;;
-import { AlertService } from &#x27;../../services/alert/alert.service&#x27;;
-import { Alert } from &#x27;../../interfaces/alert&#x27;;
 
 /**
  * Photographer search page component
