--- a/docs/components/CheckoutPageComponent.html
+++ b/docs/components/CheckoutPageComponent.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title>Eventpicking - Dokumentation</title>
+        <title>EventPicKing - Dokumentation</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -13,7 +13,7 @@
     <body>
 
         <div class="navbar navbar-default navbar-fixed-top visible-xs">
-            <a href="../" class="navbar-brand">Eventpicking - Dokumentation</a>
+            <a href="../" class="navbar-brand">EventPicKing - Dokumentation</a>
             <button type="button" class="btn btn-default btn-menu fa fa-bars" id="btn-menu"></button>
         </div>
 
@@ -26,7 +26,7 @@
                 <ul class="list">
             
                     <li class="title">
-                        <a href="../index.html">Eventpicking - Dokumentation</a>
+                        <a href="../index.html">EventPicKing - Dokumentation</a>
                     </li>
             
                     <li class="divider"></li>
@@ -382,7 +382,7 @@
                        <ul class="list">
                    
                            <li class="title">
-                               <a href="../index.html">Eventpicking - Dokumentation</a>
+                               <a href="../index.html">EventPicKing - Dokumentation</a>
                            </li>
                    
                            <li class="divider"></li>
@@ -957,7 +957,7 @@
                     </tr>
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="73" class="link-to-prism">src/app/pages/checkout-page/checkout-page.component.ts:73</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="74" class="link-to-prism">src/app/pages/checkout-page/checkout-page.component.ts:74</a></div>
                                 </td>
                             </tr>
     
@@ -1047,7 +1047,7 @@
     
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="256" class="link-to-prism">src/app/pages/checkout-page/checkout-page.component.ts:256</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="257" class="link-to-prism">src/app/pages/checkout-page/checkout-page.component.ts:257</a></div>
                                 </td>
                             </tr>
     
@@ -1091,7 +1091,7 @@
     
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="90" class="link-to-prism">src/app/pages/checkout-page/checkout-page.component.ts:90</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="91" class="link-to-prism">src/app/pages/checkout-page/checkout-page.component.ts:91</a></div>
                                 </td>
                             </tr>
     
@@ -1130,7 +1130,7 @@
     
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="243" class="link-to-prism">src/app/pages/checkout-page/checkout-page.component.ts:243</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="244" class="link-to-prism">src/app/pages/checkout-page/checkout-page.component.ts:244</a></div>
                                 </td>
                             </tr>
     
@@ -1169,7 +1169,7 @@
     
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="223" class="link-to-prism">src/app/pages/checkout-page/checkout-page.component.ts:223</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="224" class="link-to-prism">src/app/pages/checkout-page/checkout-page.component.ts:224</a></div>
                                 </td>
                             </tr>
     
@@ -1251,7 +1251,7 @@
                         </tr>
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="35" class="link-to-prism">src/app/pages/checkout-page/checkout-page.component.ts:35</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="36" class="link-to-prism">src/app/pages/checkout-page/checkout-page.component.ts:36</a></div>
                                 </td>
                             </tr>
     
@@ -1292,7 +1292,7 @@
                         </tr>
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="43" class="link-to-prism">src/app/pages/checkout-page/checkout-page.component.ts:43</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="44" class="link-to-prism">src/app/pages/checkout-page/checkout-page.component.ts:44</a></div>
                                 </td>
                             </tr>
     
@@ -1337,7 +1337,7 @@
                         </tr>
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="73" class="link-to-prism">src/app/pages/checkout-page/checkout-page.component.ts:73</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="74" class="link-to-prism">src/app/pages/checkout-page/checkout-page.component.ts:74</a></div>
                                 </td>
                             </tr>
     
@@ -1382,7 +1382,7 @@
                         </tr>
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="68" class="link-to-prism">src/app/pages/checkout-page/checkout-page.component.ts:68</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="69" class="link-to-prism">src/app/pages/checkout-page/checkout-page.component.ts:69</a></div>
                                 </td>
                             </tr>
     
@@ -1427,7 +1427,7 @@
                         </tr>
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="71" class="link-to-prism">src/app/pages/checkout-page/checkout-page.component.ts:71</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="72" class="link-to-prism">src/app/pages/checkout-page/checkout-page.component.ts:72</a></div>
                                 </td>
                             </tr>
     
@@ -1473,7 +1473,7 @@
                         </tr>
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="56" class="link-to-prism">src/app/pages/checkout-page/checkout-page.component.ts:56</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="57" class="link-to-prism">src/app/pages/checkout-page/checkout-page.component.ts:57</a></div>
                                 </td>
                             </tr>
     
@@ -1514,7 +1514,7 @@
                         </tr>
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="39" class="link-to-prism">src/app/pages/checkout-page/checkout-page.component.ts:39</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="40" class="link-to-prism">src/app/pages/checkout-page/checkout-page.component.ts:40</a></div>
                                 </td>
                             </tr>
     
@@ -1554,7 +1554,7 @@
                         </tr>
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="46" class="link-to-prism">src/app/pages/checkout-page/checkout-page.component.ts:46</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="47" class="link-to-prism">src/app/pages/checkout-page/checkout-page.component.ts:47</a></div>
                                 </td>
                             </tr>
     
@@ -1595,7 +1595,7 @@
                         </tr>
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="54" class="link-to-prism">src/app/pages/checkout-page/checkout-page.component.ts:54</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="55" class="link-to-prism">src/app/pages/checkout-page/checkout-page.component.ts:55</a></div>
                                 </td>
                             </tr>
     
@@ -1635,7 +1635,7 @@
                         </tr>
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="48" class="link-to-prism">src/app/pages/checkout-page/checkout-page.component.ts:48</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="49" class="link-to-prism">src/app/pages/checkout-page/checkout-page.component.ts:49</a></div>
                                 </td>
                             </tr>
     
@@ -1680,7 +1680,7 @@
                         </tr>
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="66" class="link-to-prism">src/app/pages/checkout-page/checkout-page.component.ts:66</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="67" class="link-to-prism">src/app/pages/checkout-page/checkout-page.component.ts:67</a></div>
                                 </td>
                             </tr>
     
@@ -1720,7 +1720,7 @@
                         </tr>
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="29" class="link-to-prism">src/app/pages/checkout-page/checkout-page.component.ts:29</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="30" class="link-to-prism">src/app/pages/checkout-page/checkout-page.component.ts:30</a></div>
                                 </td>
                             </tr>
     
@@ -1761,7 +1761,7 @@
                         </tr>
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="41" class="link-to-prism">src/app/pages/checkout-page/checkout-page.component.ts:41</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="42" class="link-to-prism">src/app/pages/checkout-page/checkout-page.component.ts:42</a></div>
                                 </td>
                             </tr>
     
@@ -1802,7 +1802,7 @@
                         </tr>
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="51" class="link-to-prism">src/app/pages/checkout-page/checkout-page.component.ts:51</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="52" class="link-to-prism">src/app/pages/checkout-page/checkout-page.component.ts:52</a></div>
                                 </td>
                             </tr>
     
@@ -1848,7 +1848,7 @@
                         </tr>
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="36" class="link-to-prism">src/app/pages/checkout-page/checkout-page.component.ts:36</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="37" class="link-to-prism">src/app/pages/checkout-page/checkout-page.component.ts:37</a></div>
                                 </td>
                             </tr>
     
@@ -1882,7 +1882,7 @@
                         </tr>
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="60" class="link-to-prism">src/app/pages/checkout-page/checkout-page.component.ts:60</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="61" class="link-to-prism">src/app/pages/checkout-page/checkout-page.component.ts:61</a></div>
                                 </td>
                             </tr>
     
@@ -1916,7 +1916,7 @@
                         </tr>
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="61" class="link-to-prism">src/app/pages/checkout-page/checkout-page.component.ts:61</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="62" class="link-to-prism">src/app/pages/checkout-page/checkout-page.component.ts:62</a></div>
                                 </td>
                             </tr>
     
@@ -1951,7 +1951,7 @@
                         </tr>
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="64" class="link-to-prism">src/app/pages/checkout-page/checkout-page.component.ts:64</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="65" class="link-to-prism">src/app/pages/checkout-page/checkout-page.component.ts:65</a></div>
                                 </td>
                             </tr>
     
@@ -1992,7 +1992,7 @@
                         </tr>
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="58" class="link-to-prism">src/app/pages/checkout-page/checkout-page.component.ts:58</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="59" class="link-to-prism">src/app/pages/checkout-page/checkout-page.component.ts:59</a></div>
                                 </td>
                             </tr>
     
@@ -2027,7 +2027,7 @@
                         </tr>
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="32" class="link-to-prism">src/app/pages/checkout-page/checkout-page.component.ts:32</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="33" class="link-to-prism">src/app/pages/checkout-page/checkout-page.component.ts:33</a></div>
                                 </td>
                             </tr>
     
@@ -2047,19 +2047,20 @@
 
     <div class="tab-pane fade tab-source-code" id="c-source">
         <pre class="line-numbers"><code class="language-typescript">import { Component, OnInit, TemplateRef, ViewChild } from &#x27;@angular/core&#x27;;
-import { Log } from &#x27;ng2-logger&#x27;;
-import { FirebaseStorageService } from &#x27;../../services/firebase/storage/firebase-storage.service&#x27;;
-import { FirebaseAuthService } from &#x27;../../services/auth/firebase-auth/firebase-auth.service&#x27;;
-import { User } from &#x27;../../classes/user&#x27;;
-import { ShoppingCartItem } from &#x27;../../interfaces/shopping-cart-item&#x27;;
 import * as localforage from &#x27;localforage&#x27;;
+import { Log } from &#x27;ng2-logger&#x27;;
+
 import { environment } from &#x27;../../../environments/environment&#x27;;
-import { FirebaseFirestoreService } from &#x27;../../services/firebase/firestore/firebase-firestore.service&#x27;;
-import { Transaction, TransactionItem } from &#x27;../../interfaces/transaction&#x27;;
-import { CURRENCY } from &#x27;../../enums/currency&#x27;;
+import { User } from &#x27;../../classes/user&#x27;;
 import { COUNTRY } from &#x27;../../enums/country&#x27;;
-import { NavigationService } from &#x27;../../services/navigation/navigation.service&#x27;;
+import { CURRENCY } from &#x27;../../enums/currency&#x27;;
 import { SHOPPINGCARTITEMTYPE } from &#x27;../../enums/shopping-cart-item-type&#x27;;
+import { ShoppingCartItem } from &#x27;../../interfaces/shopping-cart-item&#x27;;
+import { Transaction, TransactionItem } from &#x27;../../interfaces/transaction&#x27;;
+import { FirebaseAuthService } from &#x27;../../services/auth/firebase-auth/firebase-auth.service&#x27;;
+import { FirebaseFirestoreService } from &#x27;../../services/firebase/firestore/firebase-firestore.service&#x27;;
+import { FirebaseStorageService } from &#x27;../../services/firebase/storage/firebase-storage.service&#x27;;
+import { NavigationService } from &#x27;../../services/navigation/navigation.service&#x27;;
 
 declare let paypal: any;
 
