--- a/docs/components/DashboardPhotographerComponent.html
+++ b/docs/components/DashboardPhotographerComponent.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title>Eventpicking - Dokumentation</title>
+        <title>EventPicKing - Dokumentation</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -13,7 +13,7 @@
     <body>
 
         <div class="navbar navbar-default navbar-fixed-top visible-xs">
-            <a href="../" class="navbar-brand">Eventpicking - Dokumentation</a>
+            <a href="../" class="navbar-brand">EventPicKing - Dokumentation</a>
             <button type="button" class="btn btn-default btn-menu fa fa-bars" id="btn-menu"></button>
         </div>
 
@@ -26,7 +26,7 @@
                 <ul class="list">
             
                     <li class="title">
-                        <a href="../index.html">Eventpicking - Dokumentation</a>
+                        <a href="../index.html">EventPicKing - Dokumentation</a>
                     </li>
             
                     <li class="divider"></li>
@@ -382,7 +382,7 @@
                        <ul class="list">
                    
                            <li class="title">
-                               <a href="../index.html">Eventpicking - Dokumentation</a>
+                               <a href="../index.html">EventPicKing - Dokumentation</a>
                            </li>
                    
                            <li class="divider"></li>
@@ -2536,7 +2536,7 @@ import { PriceList } from &#x27;../../classes/price-list&#x27;;
 import { User } from &#x27;../../classes/user&#x27;;
 import { PhotographerProfile } from &#x27;../../interfaces/photographer-profile&#x27;;
 import { PrintingHouse } from &#x27;../../interfaces/printing-house&#x27;;
-import { Transaction, TransactionItem } from &#x27;../../interfaces/transaction&#x27;;
+import { Transaction } from &#x27;../../interfaces/transaction&#x27;;
 import { FirebaseAuthService } from &#x27;../../services/auth/firebase-auth/firebase-auth.service&#x27;;
 import { FirebaseFirestoreService } from &#x27;../../services/firebase/firestore/firebase-firestore.service&#x27;;
 import { GeolocationService } from &#x27;../../services/geolocation/geolocation.service&#x27;;
