--- a/docs/components/EventUserComponent.html
+++ b/docs/components/EventUserComponent.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title>Eventpicking - Dokumentation</title>
+        <title>EventPicKing - Dokumentation</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -13,7 +13,7 @@
     <body>
 
         <div class="navbar navbar-default navbar-fixed-top visible-xs">
-            <a href="../" class="navbar-brand">Eventpicking - Dokumentation</a>
+            <a href="../" class="navbar-brand">EventPicKing - Dokumentation</a>
             <button type="button" class="btn btn-default btn-menu fa fa-bars" id="btn-menu"></button>
         </div>
 
@@ -26,7 +26,7 @@
                 <ul class="list">
             
                     <li class="title">
-                        <a href="../index.html">Eventpicking - Dokumentation</a>
+                        <a href="../index.html">EventPicKing - Dokumentation</a>
                     </li>
             
                     <li class="divider"></li>
@@ -382,7 +382,7 @@
                        <ul class="list">
                    
                            <li class="title">
-                               <a href="../index.html">Eventpicking - Dokumentation</a>
+                               <a href="../index.html">EventPicKing - Dokumentation</a>
                            </li>
                    
                            <li class="divider"></li>
@@ -1984,12 +1984,12 @@ import { ModalDirective } from &#x27;ng-mdb-pro/free/modals/modal.directive&#x27
 import { Log } from &#x27;ng2-logger&#x27;;
 
 import { Event } from &#x27;../../classes/event&#x27;;
-import { PrintingHouse } from &#x27;../../interfaces/printing-house&#x27;;
+import { PriceList } from &#x27;../../classes/price-list&#x27;;
 import { User } from &#x27;../../classes/user&#x27;;
 import { EventPicture } from &#x27;../../interfaces/event-picture&#x27;;
-import { FirebaseFirestoreService } from &#x27;../../services/firebase/firestore/firebase-firestore.service&#x27;;
-import { PriceList } from &#x27;../../classes/price-list&#x27;;
 import { PhotographerProfile } from &#x27;../../interfaces/photographer-profile&#x27;;
+import { FirebaseFirestoreService } from &#x27;../../services/firebase/firestore/firebase-firestore.service&#x27;;
+
 /**
  * Event user view component
  * @author Daniel Sogl, Markus Kirschner, Tim Krießler
