--- a/docs/components/PaymentSuccessPageComponent.html
+++ b/docs/components/PaymentSuccessPageComponent.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title>Eventpicking - Dokumentation</title>
+        <title>EventPicKing - Dokumentation</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -13,7 +13,7 @@
     <body>
 
         <div class="navbar navbar-default navbar-fixed-top visible-xs">
-            <a href="../" class="navbar-brand">Eventpicking - Dokumentation</a>
+            <a href="../" class="navbar-brand">EventPicKing - Dokumentation</a>
             <button type="button" class="btn btn-default btn-menu fa fa-bars" id="btn-menu"></button>
         </div>
 
@@ -26,7 +26,7 @@
                 <ul class="list">
             
                     <li class="title">
-                        <a href="../index.html">Eventpicking - Dokumentation</a>
+                        <a href="../index.html">EventPicKing - Dokumentation</a>
                     </li>
             
                     <li class="divider"></li>
@@ -382,7 +382,7 @@
                        <ul class="list">
                    
                            <li class="title">
-                               <a href="../index.html">Eventpicking - Dokumentation</a>
+                               <a href="../index.html">EventPicKing - Dokumentation</a>
                            </li>
                    
                            <li class="divider"></li>
@@ -888,7 +888,7 @@
     
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="12" class="link-to-prism">src/app/pages/payment-success-page/payment-success-page.component.ts:12</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="11" class="link-to-prism">src/app/pages/payment-success-page/payment-success-page.component.ts:11</a></div>
                                 </td>
                             </tr>
     
@@ -918,12 +918,9 @@
   styleUrls: [&#x27;./payment-success-page.component.scss&#x27;]
 })
 export class PaymentSuccessPageComponent implements OnInit {
+  constructor() {}
 
-  constructor() { }
-
-  ngOnInit() {
-  }
-
+  ngOnInit() {}
 }
 </code></pre>
     </div>
